[gd_scene load_steps=4 format=3 uid="uid://main"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HSplit" type="HSplitContainer" parent="Margin"]
layout_mode = 2
size_flags_vertical = 3

[node name="MapPanel" type="Panel" parent="Margin/HSplit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MapTexture" type="TextureRect" parent="Margin/HSplit/MapPanel"]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
stretch_mode = 6

[node name="Avatar" type="ColorRect" parent="Margin/HSplit/MapPanel"]
layout_mode = 0
position = Vector2(40, 40)
size = Vector2(20, 20)
color = Color(0.917647, 0.156863, 0.152941, 1)

[node name="Markers" type="Control" parent="Margin/HSplit/MapPanel"]
layout_mode = 0
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RightPanel" type="Panel" parent="Margin/HSplit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(420, 0)

[node name="VBox" type="VBoxContainer" parent="Margin/HSplit/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0

[node name="TimeBar" type="HBoxContainer" parent="Margin/HSplit/RightPanel/VBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Margin/HSplit/RightPanel/VBox/TimeBar"]
layout_mode = 2
text = "Time Scale"

[node name="Play" type="Button" parent="Margin/HSplit/RightPanel/VBox/TimeBar"]
layout_mode = 2
text = "1x"

[node name="Double" type="Button" parent="Margin/HSplit/RightPanel/VBox/TimeBar"]
layout_mode = 2
text = "2x"

[node name="Quad" type="Button" parent="Margin/HSplit/RightPanel/VBox/TimeBar"]
layout_mode = 2
text = "4x"

[node name="Pause" type="Button" parent="Margin/HSplit/RightPanel/VBox/TimeBar"]
layout_mode = 2
text = "Pause"

[node name="Tabs" type="TabContainer" parent="Margin/HSplit/RightPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Command" type="VBoxContainer" parent="Margin/HSplit/RightPanel/VBox/Tabs"]
layout_mode = 2
text = "Command"

[node name="CommandButtons" type="GridContainer" parent="Margin/HSplit/RightPanel/VBox/Tabs/Command"]
layout_mode = 2
columns = 2

[node name="TravelBtn" type="Button" parent="Margin/HSplit/RightPanel/VBox/Tabs/Command/CommandButtons"]
layout_mode = 2
text = "Travel Autopick"

[node name="HuntBtn" type="Button" parent="Margin/HSplit/RightPanel/VBox/Tabs/Command/CommandButtons"]
layout_mode = 2
text = "Hunt"

[node name="GatherBtn" type="Button" parent="Margin/HSplit/RightPanel/VBox/Tabs/Command/CommandButtons"]
layout_mode = 2
text = "Gather"

[node name="MineBtn" type="Button" parent="Margin/HSplit/RightPanel/VBox/Tabs/Command/CommandButtons"]
layout_mode = 2
text = "Mine"

[node name="RestBtn" type="Button" parent="Margin/HSplit/RightPanel/VBox/Tabs/Command/CommandButtons"]
layout_mode = 2
text = "Rest"

[node name="CraftBtn" type="Button" parent="Margin/HSplit/RightPanel/VBox/Tabs/Command/CommandButtons"]
layout_mode = 2
text = "Craft"

[node name="ShopBtn" type="Button" parent="Margin/HSplit/RightPanel/VBox/Tabs/Command/CommandButtons"]
layout_mode = 2
text = "Shop"

[node name="QuestBtn" type="Button" parent="Margin/HSplit/RightPanel/VBox/Tabs/Command/CommandButtons"]
layout_mode = 2
text = "Quest"

[node name="Location" type="VBoxContainer" parent="Margin/HSplit/RightPanel/VBox/Tabs"]
layout_mode = 2
text = "Location"

[node name="LocationLabel" type="Label" parent="Margin/HSplit/RightPanel/VBox/Tabs/Location"]
layout_mode = 2
text = "Current Location"

[node name="NPCList" type="ItemList" parent="Margin/HSplit/RightPanel/VBox/Tabs/Location"]
layout_mode = 2
size_flags_vertical = 3

[node name="Character" type="VBoxContainer" parent="Margin/HSplit/RightPanel/VBox/Tabs"]
layout_mode = 2
text = "Character"

[node name="Stats" type="RichTextLabel" parent="Margin/HSplit/RightPanel/VBox/Tabs/Character"]
layout_mode = 2
size_flags_vertical = 3
fit_content_height = true

[node name="Inventory" type="VBoxContainer" parent="Margin/HSplit/RightPanel/VBox/Tabs"]
layout_mode = 2
text = "Inventory"

[node name="InventoryList" type="ItemList" parent="Margin/HSplit/RightPanel/VBox/Tabs/Inventory"]
layout_mode = 2
size_flags_vertical = 3

[node name="Log" type="VBoxContainer" parent="Margin/HSplit/RightPanel/VBox/Tabs"]
layout_mode = 2
text = "Log"

[node name="LogList" type="ItemList" parent="Margin/HSplit/RightPanel/VBox/Tabs/Log"]
layout_mode = 2
size_flags_vertical = 3

[node name="Footer" type="HBoxContainer" parent="Margin/HSplit/RightPanel/VBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveBtn" type="Button" parent="Margin/HSplit/RightPanel/VBox/Footer"]
layout_mode = 2
text = "Save"

[node name="LoadBtn" type="Button" parent="Margin/HSplit/RightPanel/VBox/Footer"]
layout_mode = 2
text = "Load"

[node name="BlessingBtn" type="Button" parent="Margin/HSplit/RightPanel/VBox/Footer"]
layout_mode = 2
text = "Bless"

[node name="TimeLabel" type="Label" parent="Margin/HSplit/RightPanel/VBox/Footer"]
layout_mode = 2
text = "Day 1"

[ext_resource type="Script" path="res://ui/main.gd" id="1"]

